fixes morning&afternoon layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,5 +102,6 @@
     <string name="title_activity_morning">MorningActivity</string>
     <string name="title_activity_afternoon">AfternoonActivity</string>
     <string name="title_activity_evening">EveningActivity</string>
+    <string name="title_activity_main_basic">MainActivityBasic</string>
 
 </resources>
